# search_engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  InvertIndex.cpp  InvertIndex.h  JSON.cpp  README.md  Readme.md  Server.cpp  Tests.cpp  ThreadPool.cpp  ThreadPool.h  requests.json  search_engine.cpp
doc/: Readme.md
include/: InvertIndex.h  JSON.h  Server.h
resources/: answers.json  config.json  requests.json
src/: InvertIndex.cpp  JSON.cpp  Server.cpp  ThreadPool.cpp  search_engine.cpp
tests/: CMakeLists.txt  Tests.cpp
